<resources>
    <string name="app_name">UltimaAppIvan</string>
    <string name="hint_dni">DNI</string>
    <string name="hint_password">Password</string>
    <string name="btn_logIn">Log In</string>
    <string name="btn_help">Help</string>
    <string name="saludo">Hola</string>
    <string name="btn_mostrar_juegos">Mostrar juegos</string>
    <string name="mensaje1">Mensaje 1</string>
    <string name="mensaje2">Mensaje 2</string>
    <string name="mensaje3">Mensaje 3</string>
</resources>