<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pantalla2">

    <TextView
        android:id="@+id/txt_saludo_pantalla2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/saludo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_mostrarJuegos_pantalla2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_mostrar_juegos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_saludo_pantalla2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_mensaje1_pantalla2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/mensaje1"
        app:layout_constraintBottom_toBottomOf="@+id/btn_mostrarJuegos_pantalla2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_mostrarJuegos_pantalla2" />

    <Button
        android:id="@+id/btn_mensaje2_pantalla2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/mensaje2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_mostrarJuegos_pantalla2"
        app:layout_constraintStart_toStartOf="@+id/btn_mostrarJuegos_pantalla2"
        app:layout_constraintTop_toBottomOf="@+id/btn_mostrarJuegos_pantalla2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_mensaje3_pantalla2"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/mensaje3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_mensaje1_pantalla2"
        app:layout_constraintStart_toStartOf="@+id/btn_mensaje1_pantalla2"
        app:layout_constraintTop_toBottomOf="@+id/btn_mensaje1_pantalla2"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>